Changed site to fit challenge problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,31 @@
 body {
-	background-color: blueviolet;
+	background-color: #fff2cd;
 }
 
 h1 {
 	text-align: center;
-	color: white;
+	color: #deac94;
 }
-a {
-	color: pink;
+
+p {
+	text-align: center;
+}
+
+img {
+	display: block;
+	margin: auto;
+}
+
+p {
+	text-align: center;
+}
+
+.links {
+	display: flex;
+	justify-content: space-evenly;
+	color: forestgreen;
+}
+
+.links:visited {
+	color: brown;
 }
